# IMN

01_JanKwiatkowski/: CMakeLists.txt  main.cpp  plot.py  runme.sh
01_JanKwiatkowski/include/: data.h  euler.h  rk2.h  rk4.h
01_JanKwiatkowski/src/: data.cpp  euler.cpp  rk2.cpp
02_JanKwiatkowski/: CMakeLists.txt  main.cpp  plot.py  runme.sh
02_JanKwiatkowski/include/: implicit_rk2.h  trapeze.h  types.h
02_JanKwiatkowski/src/: implicit_rk2.cpp  trapeze.cpp
03_JanKwiatkowski/: CMakeLists.txt  main.cpp  plot.py  runme.sh
03_JanKwiatkowski/include/: data.h  solver.h  time_control.h  types.h
03_JanKwiatkowski/src/: data.cpp  solver.cpp  time_control.cpp
04_JanKwiatkowski/: .clang-format  CMakeLists.txt  main.cpp  plot.py  runme.sh
04_JanKwiatkowski/include/: data.h  density.h  poisson_constants.h  relaxation.h  types.h
04_JanKwiatkowski/src/: data.cpp  density.cpp  relaxation.cpp
05_JanKwiatkowski/: CMakeLists.txt  main.cpp  plot_lab5.plt  runme.sh
05_JanKwiatkowski/include/: constants.h  multigrid_relax.h  types.h
05_JanKwiatkowski/src/: multigrid_relax.cpp
06_JanKwiatkowski/: CMakeLists.txt  algebraic_solver.cpp  algebraic_solver.h  constants.h  main.cpp  mgmres.cpp  plot_lab6.plt  runme.sh  types.h
07_JanKwiatkowski/: .gitignore  CMakeLists.txt  plot_lab7.plt  runme.sh
07_JanKwiatkowski/src/: main.cpp  navier_stokes.cpp  navier_stokes.h
08_JanKwiatkowski/: .gitignore  CMakeLists.txt  plot_u_D0_D01.plt  plot_x_c_v.plt  runme.sh
08_JanKwiatkowski/src/: convection-diffusion.cpp  convection-diffusion.h  main.cpp
09_JanKwiatkowski/: .clang-format  CMakeLists.txt  plot.plt  runme.sh
09_JanKwiatkowski/src/: crank_nicolson.cpp  crank_nicolson.h  main.cpp
